// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render a standard block link 1`] = `
.c0 {
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.5rem;
  display: block;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  href="https://www.bbc.com/"
>
  Some link text
</a>
`;

exports[`Link should render an inline link after passing an inline prop 1`] = `
.c0 {
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.5rem;
  display: inline;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  href="https://www.bbc.com/"
>
  Some link text
</a>
`;
